[tool.poetry]
name = "templates-sdk"
version = "0.1.0"
description = ""
authors = ["Arturo Martinez <arturo.martinez@shimoku.com>"]
readme = "README.md"
packages = [{include = "templates_sdk"}]

[tool.poetry.dependencies]
python = "^3.9"
shimoku-api-python = "1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
